Fix margin on small screens

--- a/sass/index.sass
+++ b/sass/index.sass
@@ -440,6 +440,7 @@ p
     .foo
         margin:
             left: 0
-            right: 0
+            // keep right margin for nav circles
+            // right: 0
         .foo-main > div
             margin-left: 0
